create api for student
