# conf/swagger/swagger.yaml
@@ -10,7 +10,7 @@ paths:
     get:
       tags:
       - "Students"
-      summary: "Get students"
+      summary: "Get all students"
       description: "Get all students"
       responses:
         200:
@@ -56,15 +56,41 @@ paths:
                 type: "integer"
         405:
           description: "Validation exception"
+  /student/{id}:
+    get:
+      tags:
+      - "Students"
+      summary: "Get concrete student"
+      description: "Get concrete students"
+      parameters:
+      - in: "path"
+        name: "id"
+        description: "Id of student"
+        type: 'integer'
+        required: true
+      responses:
+        200:
+          description: "Ok"
+          schema:
+            type: "object"
+            properties:
+              id:
+                type: "integer"
+              first_name:
+                type: "string"
+              last_name:
+                type: "string"
+              age:
+                type: "integer"
     put:
       tags:
       - "Students"
-      summary: "Update student"
-      description: "Update student by id"
+      summary: "Update concrete student"
+      description: "Update concrete student"
       consumes:
       - "application/x-www-form-urlencoded"
       parameters:
-      - in: "formData"
+      - in: "path"
         name: "id"
         description: "Id of student"
         type: 'integer'
@@ -93,12 +119,12 @@ paths:
     delete:
       tags:
       - "Students"
-      summary: "Delete student"
-      description: "Delete student by id"
+      summary: "Delete concrete student"
+      description: "Delete concrete student"
       consumes:
       - "application/x-www-form-urlencoded"
       parameters:
-      - in: "formData"
+      - in: "path"
         name: "id"
         description: "Id of student"
         type: 'integer'
@@ -112,5 +138,6 @@ paths:
           description: "Student not found"
         405:
           description: "Validation exception" 
+
 
 
